# qgiflib

./: CMakeLists.txt  LICENSE  README.md  REUSE.toml  apply-clang-format.sh
.reuse/: dep5
src/: CMakeLists.txt  qgiflib.cpp  qgiflib.hpp
test/: CMakeLists.txt  main.cpp
